# carsds

./: .gitattributes  CMakeLists.txt  README.md  RESULTS.md  TODO.md  conanfile.py  requirements.txt
.github/workflows/: unit-tests.yml
cli/: CMakeLists.txt  main.cpp
include/: CSVUtils.h  CountResult.h  Transport.h  carsds.h  carsprocessor.h
resources/: telangana_vehicle_sales.csv  telangana_vehicle_sales_July.csv  telangana_vehicle_sales_June.csv  telangana_vehicle_sales_small.csv
src/: CSVUtils.cpp  CountResult.cpp  Transport.cpp  carsds.cpp  carsprocessor.cpp
tests/unit/: CMakeLists.txt  carsds_test.cpp  process_tests.cpp  reduce_tests.cpp
